test/static/wrong/shadow2.kk.out
test/static/wrong/shadow2.kk(2,19): error: Type a is already defined