test/static/wrong/shadow2.kk
// shadow parameter
val id : forall<a,a> (a) -> a = (fun(x) {
  return x
})
